--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,6 @@ body {
 }
 
 .header-container {
-    display: flex;
+    height: 75px;
     justify-content: space-between;
-    align-items: center;
-}
-
-.header-container #header-logo {
-    text-decoration: none;
-}
-
-.header-container h1 {
-    font-size: 2em;
 }
